Addign colors, fixing spacing and creating the scrolable area for 'tasks' page

--- a/assets/css/construction.css
+++ b/assets/css/construction.css
@@ -14,3 +14,44 @@
   outline: 2px solid black;
   background: #f4f8f9;
 }
+
+/* All color for the backgroun */
+.bg-red{
+  background-color: #F8CDBA;
+}
+.bg-green{
+  background-color: rgba(32,58,48,0.1);
+}
+.bg-dark-green{
+  background-color: rgba(32,58,48);
+}
+.bg-brown{
+  background-color: #E47467;
+}
+.bg-cream{
+  background-color: #EEE8D8;
+}
+/* colors for borders */
+.border-red{
+  border: 4px solid #CB7367;
+  box-shadow: 2px 4px 0 0 #CB7367;
+}
+.border-green{
+  border: 4px solid #203A30;
+  box-shadow: 2px 4px 0 0 #203A30;
+}
+.border-brown{
+  border: 4px solid #482929;
+  box-shadow: 2px 4px 0 0 #482929;
+}
+/* colors for text */
+.txt-red{
+  color: #E47467;
+}
+.txt-green{
+  color: #203A30;
+}
+.txt-brown{
+  color: #482929;
+}
+
